--- a/Develope/views/login.handlebars
+++ b/Develope/views/login.handlebars
@@ -13,4 +13,20 @@
     <button class="btn btn-primary" type="submit">login</button>
   </div>
 </form>
+
+<h2>Create Account</h2>
+
+<form class="form create-form">
+    <div class="form-group">
+        <label for="email">email:</label>
+        <input class="form-input" type="text" id="email">
+    </div>
+    <div class="form-group">
+        <label for="password">password:</label>
+        <input class="form-input" type="password" id="password">
+    </div>
+      <div class="form-group">
+    <button class="btn btn-primary" type="submit">login</button>
+  </div>
+</form>
 <script src="/js/login.js"></script>
