--- a/Develope/views/login.handlebars
+++ b/Develope/views/login.handlebars
@@ -7,26 +7,30 @@
   </div>
   <div class="form-group">
     <label for="password">password:</label>
-    <input class="form-input" type="password" id="password"/>
+    <input class="form-input" type="password" id="password" />
   </div>
   <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
+    <button class="btn" type="submit">login</button>
   </div>
 </form>
 
 <h2>Create Account</h2>
 
-<form class="form create-form">
-    <div class="form-group">
-        <label for="email">email:</label>
-        <input class="form-input" type="text" id="email">
-    </div>
-    <div class="form-group">
-        <label for="password">password:</label>
-        <input class="form-input" type="password" id="password">
-    </div>
-      <div class="form-group">
-    <button class="btn btn-primary" type="submit">login</button>
+<form class="form signup-form">
+  <div class="form-group">
+    <label for="name-signup">name:</label>
+    <input class="form-input" type="text" id="name-signup" />
+  </div>
+  <div class="form-group">
+    <label for="email-signup">email:</label>
+    <input class="form-input" type="text" id="email-signup" />
+  </div>
+  <div class="form-group">
+    <label for="password-signup">password:</label>
+    <input class="form-input" type="password" id="password-signup" />
+  </div>
+  <div class="form-group">
+    <button class="btn" type="submit">login</button>
   </div>
 </form>
 <script src="/js/login.js"></script>
