--- a/Develope/views/layouts/main.handlebars
+++ b/Develope/views/layouts/main.handlebars
@@ -14,6 +14,10 @@
         </header>
         <main class="">
             {{{ body }}}
+            <div>
+                <h2 id="question"></h2>
+                <ul id="choices"></ul>
+            </div>
         </main>
     </div>
 </body>
