--- a/Develope/public/css/style.css
+++ b/Develope/public/css/style.css
@@ -3,10 +3,15 @@
 /* Set box-sizing to border-box for all elements */
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
   }
   
   body {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
   
   header {
@@ -20,4 +25,12 @@
   footer {
 
   }
+  
+  .form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
   
