--- a/Develope/public/css/style.css
+++ b/Develope/public/css/style.css
@@ -1,6 +1,4 @@
-/* Global Styles */
 
-/* Set box-sizing to border-box for all elements */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -12,25 +10,60 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-color:darkcyan;
   }
   
-  header {
+  h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 5rem;
+    margin-bottom: 3rem;
+  }
 
+  h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border: 1px solid black;
+    margin: 1rem;
+    font-size: 2rem;
   }
-  
-  section {
 
+  main {
+    border: 3px solid black;
   }
-  
-  footer {
 
+  div {
+    margin: 2rem;
   }
-  
+
   .form {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 2rem;
+  }
+
+  .form-group {
+    margin-bottom: 10px;
+    justify-content: center;
+  }
+
+  form.form.login-form {
+    border: 1px solid black;
+  }
+
+  form.form.signup-form {
+    border: 1px solid black;
+  }
+
+
+  input#email.form-input {
+    justify-content: center;
   }
 
   
