--- a/Develope/views/layouts/main.handlebars
+++ b/Develope/views/layouts/main.handlebars
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="/Develope/public/reset.css">
-    <link rel="stylesheet" href="/Develope//public/style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Trivia</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <div>
-        <header>
-            <h1>🏯Anime Trivia🏯</h1>
+        <header class="display-flex align-center">
+            <h1 class = "test">🏯Anime Trivia🏯</h1>
         </header>
         <main class="">
             {{{ body }}}
