--- a/Develope/views/layouts/main.handlebars
+++ b/Develope/views/layouts/main.handlebars
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="/Develope/public/reset.css">
-    <link rel="stylesheet" href="/Develope//public/style.css">
 <head>
+    <link rel="stylesheet" href="/Develope/public/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Trivia</title>
