--- a/Develope/views/layouts/main.handlebars
+++ b/Develope/views/layouts/main.handlebars
@@ -18,7 +18,13 @@
                 <h2 id="question"></h2>
                 <ul id="choices"></ul>
             </div>
+            <div>
+                <p id="level">Level 1</p>
+                <p id="strikeCount">Strikes: 0</p>
+            </div>
+            <button id="submit">Submit</button>
         </main>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
