--- a/Develope/public/css/style.css
+++ b/Develope/public/css/style.css
@@ -40,6 +40,10 @@
     margin: 2rem;
   }
 
+  div.welcome {
+    font-size: 2rem;
+  }
+
   .form {
     display: flex;
     justify-content: center;
