--- a/Develope/views/login.handlebars
+++ b/Develope/views/login.handlebars
@@ -30,7 +30,7 @@
     <input class="form-input" type="password" id="password-signup" />
   </div>
   <div class="form-group">
-    <button class="btn" type="submit">login</button>
+    <button class="btn" type="submit">Create</button>
   </div>
 </form>
 
