start button and more

--- a/Develope/views/homepage.handlebars
+++ b/Develope/views/homepage.handlebars
@@ -1,3 +1,23 @@
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Anime Trivia</title>
+    <link rel="stylesheet" href="/Develope/public/reset.css" />
+    <link rel="stylesheet" href="/Develope//public/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>🏯Anime Trivia🏯</h1>
+      </header>
+      <main class="startKey">
+        <div class="welcome">{{user.name}} Press Start to begin</div>
+        <button id="startButton" class="btn" type="submit">🎌Start🎌</button>
+      </main>
+    </div>
 
-<div class="welcome">{{user.name}} Press Start to begin</div>
-<button class="btn" type="submit">🎌Start🎌</button>
+    <script src="/Develope/public/js/script.js"></script>
+
+  </body>
+</html>
