--- a/Develope/views/layouts/main.handlebars
+++ b/Develope/views/layouts/main.handlebars
@@ -25,6 +25,6 @@
             <button id="submit">Submit</button>
         </main>
     </div>
-    <script src="script.js"></script>
+    <script src="/Develope/public/js/script.js"></script>
 </body>
 </html>
