--- a/Develope/views/homepage.handlebars
+++ b/Develope/views/homepage.handlebars
@@ -17,7 +17,7 @@
       </main>
     </div>
 
-    <script src="/Develope/public/js/script.js"></script>
+    <script src="/js/script.js"></script>
 
   </body>
 </html>
