--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div>
-        <header class="display-flex align-center">
-            <h1 class = "test">🏯Anime Trivia🏯</h1>
+        <header>
+            <h1>🏯Anime Trivia🏯</h1>
         </header>
         <main class="">
             {{{ body }}}
-            <div>
+            <div class="trivia" style="display: none;">
                 <h2 id="question"></h2>
                 <ul id="choices"></ul>
             </div>
-            <div>
+            <div class = "scoreBox">
                 <p id="level">Level 1</p>
                 <p id="strikeCount">Strikes: 0</p>
             </div>
