--- a/Develope/views/layouts/main.handlebars
+++ b/Develope/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
             {{{ body }}}
             <div>
                 <h2 id="question"></h2>
-                <ul id="choices"></ul>
+                <ul id="choices-container"></ul>
             </div>
             <div>
                 <p id="level">Level 1</p>
