--- a/Develope/views/trivia.handlebars
+++ b/Develope/views/trivia.handlebars
@@ -2,11 +2,7 @@
   {{#each questions as |question|}}
     <div class="question">
       <h2>{{question}}</h2>
-      <ul class="choices">
-        {{#each answers as |answer|}}
-          <li>{{answer}}</li>
-        {{/each}}
-      </ul>
+      <div id="choices-container"></div>
     </div>
   {{/each}}
 </div>
