submit button updated

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/Develope/public/css/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anime Trivia</title>
@@ -25,6 +24,6 @@
             <button id="submit">Submit</button>
         </main>
     </div>
-    <script src="/Develope/public/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
