--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
             {{{ body }}}
             <div class="trivia" style="display: none;">
                 <h2 id="question"></h2>
-                <ul id="choices-container"></ul>
+                <ul id="choices"></ul>
             </div>
             <div class = "scoreBox">
                 <p id="level">Level 1</p>
