--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,7 +10,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color:darkcyan;
+    background-image: url("/img/anime.jpg");
+    background-size: contain;
+    background-position: center;
+    background-color: black;
   }
   
   h1 {
@@ -20,6 +23,8 @@
     text-align: center;
     font-size: 5rem;
     margin-bottom: 3rem;
+    background-color: ghostwhite;
+    border: 3px solid black;
   }
 
   h2 {
@@ -31,18 +36,21 @@
     padding: .5rem;
     font-size: 1.5rem;
     margin-bottom: 5rem;
+    background-color: darkgrey;
   }
 
   main {
     margin: 1rem;
     padding: 1rem;
     border: 3px solid black;
+    background-color: ghostwhite;
 
   }
 
   main.startKey {
     margin: 2rem;
     padding: 2rem;
+    background-color: darkgrey;
   }
 
   div {
@@ -73,6 +81,7 @@
     border: 2px solid black;
     margin: 1rem;
     padding: .5rem;
+    background-color: darkgrey;
   }
 
   .form {
