--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,6 +22,7 @@
                 <p id="strikeCount">Strikes: 0</p>
             </div>
             <button id="submit">Submit</button>
+            <button id="retryButton" class="btn" style="display: none;">Retry</button>
         </main>
     </div>
     <script src="./js/script.js"></script>
