--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,14 +5,9 @@
     <title>Anime Trivia</title>
   </head>
   <body>
-    <div class="container">
-      <main class="startKey">
-        <div class="welcome">{{user.name}} Press Start to begin</div>
+      <div class="startKey">
+        <p onclick="document.getElementById('startButton').click();">Press start to begin!</p>
         <button id="startButton" class="btn" type="submit">🎌Start🎌</button>
-      </main>
-    </div>
-
-    <script src="/js/script.js"></script>
-
+      </div>
   </body>
 </html>
