--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,121 +1,155 @@
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
+* 
+{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: ghostwhite;
+}
   
-  body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background-image: url("/img/anime.jpg");
-    background-size: contain;
-    background-position: center;
-    background-color: black;
-  }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-image: url("/img/anime.jpg");
+  background-size: cover;
+  background-position: initial;
+  background-color: black;
+}
   
-  h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    font-size: 5rem;
-    margin-bottom: 3rem;
-    background-color: ghostwhite;
-    border: 3px solid black;
-  }
+h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 5rem;
+  margin-bottom: 3rem;
+  padding: 1rem;
+  background-color: slategrey;
+  border: 3px solid black;
+}
 
-  h2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border: 2px solid black;
-    padding: .5rem;
-    font-size: 1.5rem;
-    margin-bottom: 5rem;
-    background-color: darkgrey;
-  }
+h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 3px solid ghostwhite;
+  margin: 1rem;
+  padding: 1rem;
+  font-size: 1.5rem;
+  background-color: slategrey;
+}
 
-  main {
-    margin: 1rem;
-    padding: 1rem;
-    border: 3px solid black;
-    background-color: ghostwhite;
+main {
+  padding: 1rem;
+  border: 3px solid black;
+  background-color: ghostwhite;
+}
 
-  }
+div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding: 1rem;
+}
 
-  main.startKey {
-    margin: 2rem;
-    padding: 2rem;
-    background-color: darkgrey;
-  }
+div.startKey {
+  margin: 1rem;
+  padding: 1rem;
+  border: 2px solid black;
+  background-color: slategrey;
+}
 
-  div {
-    margin: 2rem;
-  }
+div.trivia {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border: 2px solid black;
+  background-color: slategrey;
+}
 
-  div.welcome {
-    font-size: 1.5rem;
-  }
+div.scoreBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid ghostwhite;
+  margin: 1rem;
+  padding: .5rem;
+  background-color: ghostwhite;
+}
 
-  div.trivia {
-    margin-bottom: 5rem;
-  }
+p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 1rem;
+  font-size: 1.5rem;
+  border: 3px solid ghostwhite;
+  background-color: lightslategrey;
+}
 
-  .trivia {
-    display: none;
-  }
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 2rem;
+  background-color: slategrey;
+}
 
-  li {
-    margin: 1.5rem;
-  }
+.form-group {
+  margin-bottom: 10px;
+  justify-content: center;
+}
 
-  div.scoreBox {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    border: 2px solid black;
-    margin: 1rem;
-    padding: .5rem;
-    background-color: darkgrey;
-  }
+form.form.login-form {
+  border: 2px solid black;
+}
 
-  .form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin: 2rem;
-  }
+form.form.signup-form {
+  border: 2px solid black;
+}
 
-  .form-group {
-    margin-bottom: 10px;
-    justify-content: center;
-  }
+input#email.form-input {
+  justify-content: center;
+}
 
-  form.form.login-form {
-    border: 2px solid black;
-  }
+button {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: .5rem;
+  padding: .5rem;
+  color: black;
+}
 
-  form.form.signup-form {
-    border: 2px solid black;
-  }
+button:hover {
+  transform: scale(1.1);
+}
 
+#startButton {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  padding: 1rem;
+}
 
-  input#email.form-input {
-    justify-content: center;
-  }
+#submit {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 1;
+  padding: 1;
+}
 
-  #startButton {
-    transform: scale(1.2);
-  }
-
-  #submit {
-    transform: scale(1.3);
-  }
   
   
