--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,14 +15,13 @@
             {{{ body }}}
             <div class="trivia" style="display: none;">
                 <h2 id="question"></h2>
-                <ul id="choices"></ul>
+                <div id="choices"></div>
+                <button id="submit" class="btn">Submit</button>
+                <h3 class = "scoreBox" style="display: none;">
+                    <p id="level">Level 1</p>
+                    <p id="strikeCount">Strike 0</p>
+                </h3>
             </div>
-            <div class = "scoreBox">
-                <p id="level">Level 1</p>
-                <p id="strikeCount">Strikes: 0</p>
-            </div>
-            <button id="submit">Submit</button>
-            <button id="retryButton" class="btn" style="display: none;">Retry</button>
         </main>
     </div>
     <script src="./js/script.js"></script>
