--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,6 +120,7 @@ form.form.signup-form {
 
 input#email.form-input {
   justify-content: center;
+  color: black;
 }
 
 button {
@@ -151,5 +152,158 @@ button:hover {
   padding: 1;
 }
 
+@media only screen and (max-width: 767px) {
+
+* 
+{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  color: ghostwhite;
+}
   
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-image: none;
+  background-size: cover;
+  background-position: initial;
+  background-color: black;
+}
   
+h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 50px;
+  margin-bottom: 30px;
+  padding: 10px;
+  background-color: slategrey;
+  border: 3px solid ghostwhite;
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 3px solid ghostwhite;
+  margin: 10px;
+  padding: 10px;
+  font-size: 15px;
+  background-color: slategrey;
+}
+
+main {
+  padding: 10px;
+  border: 3px solid black;
+  background-color: ghostwhite;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  padding: 10px;
+}
+
+div.startKey {
+  margin: 10px;
+  padding: 10px;
+  border: 2px solid black;
+  background-color: slategrey;
+}
+
+div.trivia {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border: 2px solid black;
+  background-color: slategrey;
+}
+
+div.scoreBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid ghostwhite;
+  margin: 10px;
+  padding: 5px;
+  background-color: ghostwhite;
+}
+
+p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px;
+  font-size: 15px;
+  border: 3px solid ghostwhite;
+  background-color: lightslategrey;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 20px;
+  background-color: slategrey;
+}
+
+.form-group {
+  margin-bottom: 10px;
+  justify-content: center;
+}
+
+form.form.login-form {
+  border: 2px solid black;
+}
+
+form.form.signup-form {
+  border: 2px solid black;
+}
+
+input#email.form-input {
+  justify-content: center;
+  color: black;
+}
+
+button {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: .5rem;
+  padding: .5rem;
+  color: black;
+}
+
+button:hover {
+  transform: scale(1.1);
+}
+
+#startButton {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+}
+
+#submit {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+  padding: 10px;
+}
+}
